name: youtubevideo
version: 0.1.0.0
license: BSD3
license-file: LICENSE
author: iokasimov
maintainer: qkasimov@gmail.com
category: Web
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
  build-depends: base, either, text, bytestring, aeson, servant, servant-client, mtl, lens, pipes
  exposed-modules: Types.Categories, Types.Videos
  default-extensions: OverloadedStrings, TypeOperators

executable youtubevideo
  main-is: Main.hs
  build-depends: base, either, text, bytestring, aeson, servant, servant-client, mtl, lens, pipes, http-client, http-client-tls
  default-extensions: OverloadedStrings, TypeOperators, DataKinds
  default-language: Haskell2010